syntax = "proto3";

                 package wedInvVideo;
service WedInvVideoService {
 rpc createWedInvVideo (WedInvVideoCreateInput) returns (WedInvVideo) {}
rpc wedInvVideos (findManyParams) returns (stream WedInvVideo) {}
rpc wedInvVideo (WedInvVideoWhereUniqueInput) returns (WedInvVideo) {}
rpc updateWedInvVideo (WedInvVideoUpdateInput) returns (WedInvVideo) {}
rpc deleteWedInvVideo (WedInvVideoWhereUniqueInput) returns (WedInvVideo) {} 
 }
message WedInvVideoCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
string video = 4;
};
message WedInvVideo {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
string video = 4;
};
message WedInvVideoWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
string video = 4;
};
message WedInvVideoUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
string video = 4;
};
message findManyParams {

};